# memov

./: .gitignore  .memignore  CLAUDE.md  README.md  index.html  install.sh  pyproject.toml
.github/workflows/: build-cross-platform.yaml  release-yum.yml
apt/dists/stable/: Release
apt/dists/stable/main/binary-amd64/: Packages
docs/: VECTORDB_IMPLEMENTATION.md  VECTORDB_USAGE.md  installation.md
mem_mcp_server/server/: mcp_server.py
mem_mcp_server/utils/: summarizer.py
memov/: docgen_cli.py  main.py
memov/constants/: prompts.py
memov/core/: git.py  manager.py
memov/debugging/: __init__.py  llm_client.py
memov/docgen/: __init__.py  code_analyzer.py  diagram_generator.py  doc_generator.py  git_utils.py  preview_server.py
memov/storage/: skills_db.py
memov/ui/: __init__.py  server.py
memov/ui/static/: app.js  index.html  styles.css
memov/web/: server.py
memov/web/static/: index.html
skills/vibegit/: SKILL.md  install.sh
skills/vibegit/.claude-plugin/: plugin.json
skills/vibegit/scripts/: _check_deps.sh  branch.sh  history.sh  init.sh  jump.sh  show.sh  snap.sh  status.sh  switch.sh  track.sh  ui_start.sh  ui_status.sh  ui_stop.sh
yum/: mem.repo
yum/repodata/: 6ce22671c8d5782a842c7c406b6f64d418d62c7168ae697e08e71876f85a16dc-primary.sqlite.bz2  935fcb6652dd11ad1ce0025025557db94e3cbfecb4ee88b65a0f242c555db9b5-other.sqlite.bz2  c5eb82ee493bde9123718da31648aa87fe080f4ca0d600f6290ed4a49a7b075f-filelists.sqlite.bz2  repomd.xml
