[project]
name = "memov"
version = "0.0.1"
description = "MCP Server for memov management and workspace monitoring"
authors = [{name = "Memov Team", email = "contact@memov.dev"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp>=1.13.0",
    "pathspec>=0.12.1",
    "psutil>=7.0.0",
    "starlette>=0.47.2",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# RAG mode: Semantic search with VectorDB (sync, search commands)
rag = [
    "chromadb>=0.5.0",
    "litellm>=1.0.0",
    "numpy>=1.26.0,<2.0.0",  # Pin to 1.26.x for PyInstaller macOS compatibility
]

# Optional: Lightweight embedding backends (install manually if needed)
# Note: onnxruntime requires macOS 13+ on Apple Silicon
# Install with: uv pip install onnxruntime  (for fastembed backend)
#          or: uv pip install openai        (for openai backend)
#          or: uv pip install sentence-transformers  (not recommended, 1.5GB)

[project.scripts]
mem = "memov.main:main"
mem-mcp-server = "mem_mcp_server.cli.server_cli:main"
mem-mcp-launcher = "mem_mcp_server.server.mcp_launcher:main"
mem-debug = "memov.cli_debug:main"

[tool.uv]
package = true

[tool.setuptools]
packages = [
    "memov",
    "memov.core",
    "memov.utils",
    "memov.ui",
    "mem_mcp_server",
    "mem_mcp_server.cli",
    "mem_mcp_server.server",
    "mem_mcp_server.utils"
]

[tool.setuptools.package-data]
"*" = ["**/*.py"]
"memov.ui" = ["static/*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
